mobile-style.css
@media screen and (max-width: 640px) {
  body {
    display: flex;
    flex-direction: column;
  }
  
  header {
    flex-direction: column-reverse;
    row-gap: 4rem;
    padding: 1rem;
    background: linear-gradient(180deg, var(--uri-gray), var(--uri-white));
  }
  
  .hero-img {
    width: 50%;
    max-width: 250px;
    align-self: flex-start;
    z-index: 3;
    border: none;
    box-shadow: -5px 5px 8px var(--uri-black);
  }
  
  .about-me {
    width: 70%;
    margin: 0 1rem;
    align-self: flex-end;
  }
  
  main {
    height: auto;
  }
  
  main>h1 {
    position: relative;
    border: none;
    background-color: inherit;
    border-radius: 0%;
    top: 0;
    margin-bottom: 8px;
  }
  
  .my-projects {
    grid-template: repeat(6, max(350px, 35vw)) / 1fr;
    row-gap: 2rem;
  }

  .view-icon {
    gap: 10px;
  }
  
  footer {
    height: auto;
    flex-direction: column-reverse;    
    background: linear-gradient(180deg, var(--uri-white), var(--uri-white), var(--uri-white), var(--uri-gray));
  }
  
  .collab {
    z-index: 2;
    margin-bottom: 4rem;
  }
  
  .footer-img {
    display: none;
  }
  
  footer>p {
    color: var(--uri-white);
  }
}

